Houston, We have a working app!
Signed-off-by: black.dragon74 <nickk.2974@gmail.com>

--- a/app/src/main/res/layout/activity_gpa.xml
+++ b/app/src/main/res/layout/activity_gpa.xml
@@ -13,5 +13,6 @@
             android:background="@color/colorBackground"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/gpaRecyclerView"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/gpaRecyclerView"
+            android:scrollbars="vertical"/>
 </android.support.constraint.ConstraintLayout>
