--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -13,5 +13,5 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/attendanceRecyclerView"
-            android:background="@color/colorBackground"/>
+            android:background="@color/colorBackground" android:scrollbars="vertical"/>
 </android.support.constraint.ConstraintLayout>
