--- a/app/src/main/res/layout/activity_contact_info.xml
+++ b/app/src/main/res/layout/activity_contact_info.xml
@@ -11,15 +11,15 @@
     <ImageView
             android:layout_width="0dp"
             android:layout_height="250dp"
-            android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/cinfoImage" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:scaleType="centerCrop" app:srcCompat="@drawable/nick"
-    />
+            android:scaleType="centerCrop"
+            tools:srcCompat="@tools:sample/avatars"/>
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="75dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cinfoImage" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:cardBackgroundColor="@android:color/white" android:id="@+id/cardView2">
         <android.support.constraint.ConstraintLayout
@@ -29,22 +29,28 @@
             <TextView
                     android:text="Mr. Some Professor"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/textView10"
+                    android:layout_height="wrap_content" android:id="@+id/cinfoName"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
                     android:textStyle="bold" android:textColor="@android:color/black"/>
             <TextView
                     android:text="Senior Professor Maybe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="0dp"
+                    app:autoSizeTextType="uniform"
+                    app:autoSizeMinTextSize="12sp"
+                    app:autoSizeMaxTextSize="16sp"
+                    app:autoSizeStepGranularity="2sp"
+                    android:layout_height="0dp"
+                    android:id="@+id/cinfoDesignation" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView10" android:textSize="16sp"
-                    android:textStyle="bold"/>
+                    app:layout_constraintTop_toBottomOf="@+id/cinfoName"
+                    android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintVertical_bias="0.0"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView2" app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +82,7 @@
                     android:text="+91-123456789"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView12"
+                    android:id="@+id/cinfoPhone"
                     app:layout_constraintStart_toEndOf="@+id/imageView5"
                     android:layout_marginStart="16dp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:textStyle="bold"
@@ -86,7 +92,7 @@
                     android:text="someone@somemail.com"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView13"
+                    android:id="@+id/cinfoEmail"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                     app:layout_constraintStart_toEndOf="@+id/imageView6" android:layout_marginStart="16dp"
                     app:layout_constraintTop_toTopOf="@+id/imageView6" android:textSize="16sp"
@@ -95,7 +101,7 @@
                     android:text="Some Boring Department"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView14"
+                    android:id="@+id/cinfoDepartment"
                     app:layout_constraintTop_toTopOf="@+id/imageView7"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                     app:layout_constraintStart_toEndOf="@+id/imageView7" android:layout_marginStart="16dp"
