--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -7,4 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".EventsActivity">
 
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/colorBackground"
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/eventsRecyclerView"
+            android:scrollbars="vertical"/>
 </android.support.constraint.ConstraintLayout>
