--- a/app/src/main/res/layout/activity_fee.xml
+++ b/app/src/main/res/layout/activity_fee.xml
@@ -4,7 +4,79 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:background="@color/colorBackground"
         android:layout_height="match_parent"
         tools:context=".FeeActivity">
 
+    <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:cardBackgroundColor="@android:color/holo_green_dark" app:cardElevation="4dp"
+            android:id="@+id/cardView3">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:text="PAID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
+                    android:textColor="@android:color/white" android:textStyle="bold"/>
+            <TextView
+                    android:text="Loading..."
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/feePaidTF" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:textSize="30sp" android:textStyle="bold"
+                    android:textColor="@android:color/white" android:textAlignment="center"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/cardView3" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:cardBackgroundColor="@android:color/holo_red_dark" app:cardElevation="4dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:text="UNPAID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView18" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:textSize="24dp" android:textStyle="bold"
+                    android:textColor="@android:color/white"/>
+            <TextView
+                    android:text="Loading..."
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/feeUnpaidTF" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:textSize="30sp" android:textStyle="bold"
+                    android:textColor="@android:color/white" android:textAlignment="center"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+    <TextView
+            android:text="I know I'm not good at UI"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView21" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:textAlignment="center"/>
 </android.support.constraint.ConstraintLayout>
