--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,4 +39,12 @@
             app:layout_constraintTop_toBottomOf="@+id/loginPasswordTF"
             android:background="@color/colorAccent"
             android:textColor="@android:color/white" android:textStyle="bold" android:textSize="18sp"/>
+    <TextView
+            android:text="Crafted with love by Nick"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:textAlignment="center"/>
 </android.support.constraint.ConstraintLayout>
