--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,29 +44,36 @@
                     app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
             <TextView
                     android:text="Loading..."
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/menuUserName" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView3"
                     android:layout_marginStart="8dp"
-                    android:textColor="@android:color/white" android:textSize="18sp"/>
+                    android:textColor="@android:color/white" android:textSize="18sp" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
             <TextView
                     android:text="Loading..."
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_width="0dp"
+                    app:autoSizeTextType="uniform"
+                    app:autoSizeMinTextSize="18sp"
+                    app:autoSizeMaxTextSize="20sp"
+                    app:autoSizeStepGranularity="2sp"
                     android:id="@+id/menuUserProgram" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/menuUserName"
                     app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
-                    android:textSize="18sp" android:textColor="@android:color/white"/>
+                    android:textColor="@android:color/white" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
             <TextView
                     android:text="Loading..."
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/menuUserAcadYear" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/menuUserProgram"
+                    android:id="@+id/menuUserAcadYear"
                     app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="8dp"
-                    android:textSize="18sp" android:textColor="@android:color/white" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+                    android:textColor="@android:color/white"
+                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/menuUserProgram"
+                    android:textSize="18sp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.RecyclerView
