--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -7,4 +7,11 @@
         android:layout_height="match_parent"
         tools:context=".ResultsActivity">
 
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:scrollbars="vertical"
+            android:id="@+id/resultsRecyclerView"/>
 </android.support.constraint.ConstraintLayout>
