--- a/app/src/main/res/layout/attendance_row.xml
+++ b/app/src/main/res/layout/attendance_row.xml
@@ -3,31 +3,37 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_marginBottom="6dp"
                                              android:background="@color/colorBackground"
                                              android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="170dp"
-            android:elevation="8dp"
-            app:cardElevation="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+            android:elevation="4dp"
+            app:cardElevation="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:cardBackgroundColor="@android:color/white"
-            android:background="@color/colorBackground">
+            android:background="@color/colorBackground"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             <TextView
                     android:text="SUBJECT NAME COMES HERE"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/attendanceSubjectTF" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:textSize="20sp" android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
+                    app:autoSizeTextType="uniform"
+                    app:autoSizeMinTextSize="18sp"
+                    app:autoSizeMaxTextSize="20sp"
+                    app:autoSizeStepGranularity="2sp"
+                    app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"
+                    android:textColor="@android:color/black" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"/>
             <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
