--- a/app/src/main/res/layout/gpa_row.xml
+++ b/app/src/main/res/layout/gpa_row.xml
@@ -2,16 +2,20 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
+                                             android:background="@color/colorBackground"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="88dp"
+            android:elevation="4dp"
+            app:cardElevation="4dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:cardBackgroundColor="@android:color/white">
+            app:cardBackgroundColor="@android:color/white" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -20,7 +24,7 @@
                     android:text="Semester 1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView17"
+                    android:id="@+id/gpaSemesterTF"
                     android:textSize="18sp" android:textStyle="bold"
                     android:textColor="@android:color/black"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
@@ -30,14 +34,14 @@
                     android:layout_height="1dp"
                     android:background="@color/colorBackground"
                     android:id="@+id/view2" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView17" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/gpaSemesterTF" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"/>
             <TextView
                     android:text="10.0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView18" app:layout_constraintStart_toStartOf="parent"
+                    android:id="@+id/gpaGPATF" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/view2"
                     android:layout_marginTop="8dp" android:textSize="24sp"
                     android:textColor="@android:color/holo_red_dark" android:textStyle="bold"/>
