--- a/app/src/main/res/layout/attendance_row.xml
+++ b/app/src/main/res/layout/attendance_row.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="170dp"
+            android:layout_height="200dp"
             android:elevation="4dp"
             app:cardElevation="4dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,18 +70,20 @@
                     android:text="Total:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView8"
-                    android:textStyle="bold" android:textColor="@android:color/black" android:textSize="18sp"/>
+                    android:id="@+id/textView9"
+                    android:textStyle="bold" android:textColor="@android:color/black" android:textSize="18sp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent"/>
             <TextView
                     android:text="100%"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/attendancePercentageTF" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="32dp" app:layout_constraintTop_toBottomOf="@+id/view"
+                    android:layout_marginEnd="32dp"
                     android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    android:textColor="@android:color/black" android:textSize="28sp" android:textStyle="bold"/>
+                    android:textColor="@android:color/black" android:textSize="40sp" android:textStyle="bold"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
             <TextView
                     android:text="N.A."
                     android:layout_width="wrap_content"
@@ -112,10 +114,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/attendanceTotalTF" app:layout_constraintStart_toEndOf="@+id/textView9"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/attendancePresentTF"
+                    android:layout_marginStart="8dp"
                     android:textColor="@android:color/black"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    app:layout_constraintTop_toTopOf="@+id/textView9"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView9"/>
+            <TextView
+                    android:text="Absent:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView11" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:textSize="18sp" android:textStyle="bold"
+                    android:textColor="@android:color/black"/>
+            <TextView
+                    android:text="N.A."
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/attendanceAbsentTF"
+                    app:layout_constraintTop_toTopOf="@+id/textView11"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView11" android:textSize="18sp"
+                    android:textColor="@android:color/black" app:layout_constraintStart_toEndOf="@+id/textView11"
+                    android:layout_marginStart="8dp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
