--- a/app/src/main/res/layout/activity_contact_info.xml
+++ b/app/src/main/res/layout/activity_contact_info.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBackground"
+        android:background="@color/backgroundColor"
         tools:context=".ContactInfoActivity">
 
     <ImageView
@@ -21,7 +21,7 @@
             android:layout_height="75dp"
             app:layout_constraintTop_toBottomOf="@+id/cinfoImage" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:cardBackgroundColor="@android:color/white" android:id="@+id/cardView2">
+            app:cardBackgroundColor="@color/cardBackgroundColor" android:id="@+id/cardView2">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -32,7 +32,7 @@
                     android:layout_height="wrap_content" android:id="@+id/cinfoName"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
-                    android:textStyle="bold" android:textColor="@android:color/black"/>
+                    android:textStyle="bold" android:textColor="@color/textPrimaryColor"/>
             <TextView
                     android:text="Senior Professor Maybe"
                     android:layout_width="0dp"
@@ -46,7 +46,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/cinfoName"
                     android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintVertical_bias="0.0"/>
+                    app:layout_constraintVertical_bias="0.0" android:textColor="@color/textPrimaryLighterColor"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
@@ -55,7 +55,7 @@
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView2" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent" app:cardBackgroundColor="@color/cardBackgroundColor">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -86,7 +86,7 @@
                     app:layout_constraintStart_toEndOf="@+id/imageView5"
                     android:layout_marginStart="16dp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:textStyle="bold"
-                    android:textColor="@android:color/black" android:textSize="16sp"
+                    android:textColor="@color/textPrimaryColor" android:textSize="16sp"
                     app:layout_constraintTop_toTopOf="@+id/imageView5"/>
             <TextView
                     android:text="someone@somemail.com"
@@ -96,7 +96,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                     app:layout_constraintStart_toEndOf="@+id/imageView6" android:layout_marginStart="16dp"
                     app:layout_constraintTop_toTopOf="@+id/imageView6" android:textSize="16sp"
-                    android:textStyle="bold" android:textColor="@android:color/black"/>
+                    android:textStyle="bold" android:textColor="@color/textPrimaryColor"/>
             <TextView
                     android:text="Some Boring Department"
                     android:layout_width="wrap_content"
@@ -105,7 +105,7 @@
                     app:layout_constraintTop_toTopOf="@+id/imageView7"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                     app:layout_constraintStart_toEndOf="@+id/imageView7" android:layout_marginStart="16dp"
-                    android:textSize="16sp" android:textStyle="bold" android:textColor="@android:color/black"/>
+                    android:textSize="16sp" android:textStyle="bold" android:textColor="@color/textPrimaryColor"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
