--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -12,6 +12,7 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/backgroundColor"
             app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/contactsRecyclerView"
             android:longClickable="false" android:scrollbars="vertical"/>
 </android.support.constraint.ConstraintLayout>
