--- a/app/src/main/res/layout/activity_fee.xml
+++ b/app/src/main/res/layout/activity_fee.xml
@@ -4,49 +4,48 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:background="@color/colorBackground"
+        android:background="@color/backgroundColor"
         android:layout_height="match_parent"
-        tools:context=".FeeActivity">
+        tools:context=".FeeActivity" android:id="@+id/constraintLayout">
 
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="200dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:cardBackgroundColor="@android:color/holo_green_dark" app:cardElevation="4dp"
-            android:id="@+id/cardView3">
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp" app:layout_constraintTop_toTopOf="parent"
+            app:cardBackgroundColor="@android:color/holo_green_dark" app:cardElevation="5dp"
+            android:id="@+id/cardView3" app:cardCornerRadius="17dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             <TextView
                     android:text="PAID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
-                    android:textColor="@android:color/white" android:textStyle="bold"/>
-            <TextView
-                    android:text="Loading..."
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/feePaidTF" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" android:textSize="30sp" android:textStyle="bold"
-                    android:textColor="@android:color/white" android:textAlignment="center"/>
+                    android:id="@+id/textView6" android:layout_marginTop="12dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:textColor="@color/textPrimaryColor"
+                    android:textStyle="bold"/>
+            <TextView
+                    android:text="Loading..."
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/feePaidTF" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp" android:layout_marginBottom="12dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textStyle="bold"
+                    android:textColor="@color/textPrimaryColor"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@+id/cardView3" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:cardBackgroundColor="@android:color/holo_red_dark" app:cardElevation="4dp">
+            android:layout_marginStart="5dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
+            app:cardBackgroundColor="@android:color/holo_red_dark" app:cardElevation="5dp" app:cardCornerRadius="17dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -55,20 +54,18 @@
                     android:text="UNPAID"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView18" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:textSize="24dp" android:textStyle="bold"
-                    android:textColor="@android:color/white"/>
+                    android:id="@+id/textView7" android:layout_marginTop="12dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
+                    android:textStyle="bold" android:textColor="@color/textPrimaryColor"/>
             <TextView
                     android:text="Loading..."
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/feeUnpaidTF" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:textSize="30sp" android:textStyle="bold"
-                    android:textColor="@android:color/white" android:textAlignment="center"/>
+                    android:id="@+id/feeUnpaidTF" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp" android:layout_marginBottom="12dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textStyle="bold"
+                    android:textColor="@color/textPrimaryColor"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
     <TextView
@@ -78,5 +75,5 @@
             android:id="@+id/textView21" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:textAlignment="center"/>
+            android:textAlignment="center" android:textColor="@color/textPrimaryLighterColor"/>
 </android.support.constraint.ConstraintLayout>
