--- a/app/src/main/res/layout/activity_internals.xml
+++ b/app/src/main/res/layout/activity_internals.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/colorBackground"
+            android:background="@color/backgroundColor"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:scrollbars="vertical"
