--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -13,5 +13,6 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:scrollbars="vertical"
+            android:background="@color/backgroundColor"
             android:id="@+id/resultsRecyclerView"/>
 </android.support.constraint.ConstraintLayout>
