--- a/app/src/main/res/layout/attendance_row.xml
+++ b/app/src/main/res/layout/attendance_row.xml
@@ -3,139 +3,85 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:background="@color/colorBackground"
-                                             android:layout_height="wrap_content">
-
+                                             android:background="@color/backgroundColor"
+                                             android:layout_height="110dp">
     <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:elevation="4dp"
-            app:cardElevation="4dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:cardBackgroundColor="@android:color/white"
-            android:background="@color/colorBackground"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp">
+            android:background="@color/cardBackgroundColor"
+            app:layout_constraintTop_toTopOf="parent" app:cardBackgroundColor="@color/cardBackgroundColor"
+            app:cardCornerRadius="17dp" android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
+            android:layout_marginStart="5dp" android:layout_marginEnd="5dp" app:cardElevation="5dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                tools:layout_editor_absoluteX="8dp">
 
             <TextView
-                    android:text="SUBJECT NAME COMES HERE"
+                    android:text="I am Subject"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/attendanceSubjectTF" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="18sp"
-                    app:autoSizeMaxTextSize="20sp"
-                    app:autoSizeStepGranularity="2sp"
-                    app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"
-                    android:textColor="@android:color/black" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-            <View
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"
-                    android:id="@+id/view" android:layout_marginTop="2dp"
+                    android:id="@+id/attendanceSubjectTF" android:layout_marginTop="12dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp" android:textColor="@color/textPrimaryColor"
+                    android:textStyle="bold"/>
+            <TextView
+                    android:text="CA - 1101"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/attendanceTotalTF" android:layout_marginTop="2dp"
                     app:layout_constraintTop_toBottomOf="@+id/attendanceSubjectTF"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:background="@android:color/black"/>
+                    android:layout_marginStart="12dp" android:textColor="@color/textPrimaryLighterColor"/>
             <TextView
-                    android:text="Section:"
+                    android:text="Percent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/attendanceSubjectTF"
-                    android:textColor="@android:color/black" android:textStyle="bold" android:textSize="18sp"/>
+                    android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp" android:layout_marginBottom="12dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/textPrimaryLighterColor"/>
             <TextView
-                    android:text="Batch:"
+                    android:text="Present"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6" android:textSize="18sp"
-                    android:textStyle="bold" android:textColor="@android:color/black"/>
+                    android:id="@+id/textView9" android:layout_marginBottom="12dp"
+                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/textPrimaryLighterColor"
+                    android:layout_marginEnd="20dp" app:layout_constraintEnd_toStartOf="@+id/textView8"/>
             <TextView
-                    android:text="Present:"
+                    android:text="Absent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:textSize="18sp"
-                    android:textColor="@android:color/black" android:textStyle="bold"/>
+                    android:id="@+id/textView11"
+                    android:layout_marginBottom="12dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/textView9"
+                    android:layout_marginEnd="20dp" android:textColor="@color/textPrimaryLighterColor"/>
             <TextView
-                    android:text="Total:"
+                    android:text="99"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView9"
-                    android:textStyle="bold" android:textColor="@android:color/black" android:textSize="18sp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    android:id="@+id/attendanceAbsentTF" app:layout_constraintStart_toStartOf="@+id/textView11"
+                    app:layout_constraintEnd_toEndOf="@+id/textView11" android:textColor="@color/textDanger"
+                    app:layout_constraintBottom_toTopOf="@+id/textView11" android:textAlignment="center"
+                    android:textStyle="bold" android:textSize="18sp"/>
             <TextView
-                    android:text="0%"
+                    android:text="99"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/attendancePercentageTF" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                    android:textColor="@android:color/black" android:textSize="40sp" android:textStyle="bold"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+                    android:id="@+id/attendancePresentTF" app:layout_constraintStart_toStartOf="@+id/textView9"
+                    app:layout_constraintEnd_toEndOf="@+id/textView9"
+                    app:layout_constraintBottom_toTopOf="@+id/textView9" android:textColor="@color/textPrimaryColor"
+                    android:textAlignment="center" android:textStyle="bold" android:textSize="18sp"/>
             <TextView
-                    android:text="N.A."
+                    android:text="100"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/attendanceSectionTF"
-                    app:layout_constraintStart_toEndOf="@+id/textView6"
-                    android:layout_marginStart="8dp" android:textColor="@android:color/black" android:textSize="18sp"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/attendanceSubjectTF"/>
-            <TextView
-                    android:text="N.A."
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/attendanceBatchTF" app:layout_constraintStart_toEndOf="@+id/textView7"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/attendanceSectionTF" android:textSize="18sp"
-                    android:textColor="@android:color/black"/>
-            <TextView
-                    android:text="N.A."
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/attendancePresentTF" app:layout_constraintStart_toEndOf="@+id/textView8"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/attendanceBatchTF"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"/>
-            <TextView
-                    android:text="N.A."
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/attendanceTotalTF" app:layout_constraintStart_toEndOf="@+id/textView9"
-                    android:layout_marginStart="8dp"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintTop_toTopOf="@+id/textView9"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView9"/>
-            <TextView
-                    android:text="Absent:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView11" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:textSize="18sp" android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
-            <TextView
-                    android:text="N.A."
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/attendanceAbsentTF"
-                    app:layout_constraintTop_toTopOf="@+id/textView11"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView11" android:textSize="18sp"
-                    android:textColor="@android:color/black" app:layout_constraintStart_toEndOf="@+id/textView11"
-                    android:layout_marginStart="8dp"/>
+                    android:id="@+id/attendancePercentageTF" app:layout_constraintEnd_toEndOf="@+id/textView8"
+                    app:layout_constraintStart_toStartOf="@+id/textView8"
+                    app:layout_constraintBottom_toTopOf="@+id/textView8" android:textColor="@color/textSuccess"
+                    android:textAlignment="center" android:textStyle="bold" android:textSize="18sp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
