--- a/app/src/main/res/layout/contacts_row.xml
+++ b/app/src/main/res/layout/contacts_row.xml
@@ -8,20 +8,47 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="50dp">
 
-    <TextView
-            android:text="Dr. Albert Einstein"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/contactTeacherName" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="16sp"
-            android:textColor="@android:color/black" android:textStyle="bold" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/arrow_right"
-            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
-    />
+    <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:cardBackgroundColor="@color/cardBackgroundColor"
+            app:cardCornerRadius="0dp" app:cardElevation="0dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/contactTeacherName" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="16dp" android:textColor="@color/textPrimaryColor"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/arrow_right"
+                    android:id="@+id/imageView2" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="16dp" android:tint="@color/textPrimaryColor"/>
+            <View
+                    android:layout_width="0dp"
+                    android:layout_height="1px"
+                    android:id="@+id/view"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginStart="16dp" android:background="@color/textPrimaryLighterColor"/>
+            <TextView
+                    android:text="Department of something"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/contactTeacherDepartment" android:layout_marginTop="2dp"
+                    app:layout_constraintTop_toBottomOf="@+id/contactTeacherName"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                    android:textSize="10sp" android:textColor="@color/textPrimaryLighterColor"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
