--- a/app/src/main/res/layout/internals_row.xml
+++ b/app/src/main/res/layout/internals_row.xml
@@ -2,139 +2,143 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
-                                             android:background="@color/colorBackground"
+                                             android:background="@color/backgroundColor"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
-
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
-            android:layout_height="130dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:cardBackgroundColor="@android:color/white"
-            app:cardElevation="4dp">
+            android:layout_height="156dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="5dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="5dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
+            app:cardElevation="5dp" app:cardBackgroundColor="@color/cardBackgroundColor" app:cardCornerRadius="17dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             <TextView
-                    android:text="FUNDAMENTALS OF SOMETHING (CA!!!!)"
+                    android:text="Fundamentals of some shit"
                     android:layout_width="0dp"
-                    android:layout_height="20dp"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="18sp"
-                    app:autoSizeMaxTextSize="20sp"
-                    app:autoSizeStepGranularity="2sp"
-                    android:id="@+id/internalSubTF" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:textAlignment="center"
-                    android:textColor="@android:color/black" android:textStyle="bold"/>
-            <TextView
-                    android:text="MTE 1:"
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView19" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/internalSubTF" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:textSize="16sp" android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
-            <TextView
-                    android:text="MTE 2:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView20" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:textSize="16sp" android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
-            <TextView
-                    android:text="20.00"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/internalMTE1TF"
-                    app:layout_constraintTop_toTopOf="@+id/textView19"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView19" android:textSize="16sp"
-                    android:textColor="@android:color/black" app:layout_constraintStart_toEndOf="@+id/textView19"
-                    android:layout_marginStart="8dp"/>
-            <TextView
-                    android:text="20.00"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/internalMTE2TF"
-                    app:layout_constraintTop_toTopOf="@+id/textView20"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView20" android:textSize="16sp"
-                    android:textColor="@android:color/black" app:layout_constraintStart_toEndOf="@+id/textView20"
-                    android:layout_marginStart="8dp"/>
-            <TextView
-                    android:text="Re Sess:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView24" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView20" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:textSize="16sp" android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
-            <TextView
-                    android:text="NA"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/internalResessTF"
-                    app:layout_constraintTop_toTopOf="@+id/textView24"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView24" android:textSize="16sp"
-                    android:textColor="@android:color/black" app:layout_constraintStart_toEndOf="@+id/textView24"
-                    android:layout_marginStart="8dp"/>
-            <TextView
-                    android:text="CWS:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView26" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/internalSubTF"
-                    android:textSize="16sp" android:textStyle="bold"
-                    android:textColor="@android:color/black" android:layout_marginEnd="16dp"
-                    app:layout_constraintEnd_toStartOf="@+id/internalCWSTF"/>
-            <TextView
-                    android:text="PRS:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView27" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView26"
-                    android:textSize="16sp" android:textStyle="bold"
-                    android:textColor="@android:color/black" android:layout_marginEnd="16dp"
-                    app:layout_constraintEnd_toStartOf="@+id/internalPRSTF"/>
-            <TextView
-                    android:text="Total:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView28" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView27"
-                    android:textSize="16sp" android:textStyle="bold"
-                    android:textColor="@android:color/black" android:layout_marginEnd="16dp"
-                    app:layout_constraintEnd_toStartOf="@+id/internalTotalTF"/>
+                    android:id="@+id/internalSubTF" android:layout_marginTop="12dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp" android:textStyle="bold"
+                    android:textColor="@color/textPrimaryColor"/>
             <TextView
                     android:text="10.00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/internalCWSTF"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView26"
-                    app:layout_constraintTop_toTopOf="@+id/textView26" android:textSize="16sp"
-                    android:textColor="@android:color/black" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"/>
+                    android:id="@+id/internalMTE1TF" android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/internalSubTF"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp" android:textColor="@color/textPrimaryColor"
+                    android:textSize="18sp" android:textStyle="bold" android:textAlignment="center"/>
             <TextView
-                    android:text="90.00"
+                    android:text="10.00"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/internalMTE2TF" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textSize="18sp" android:textColor="@color/textPrimaryColor" android:textStyle="bold"
+                    android:textAlignment="center" android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/internalSubTF"/>
+            <TextView
+                    android:text="10.00"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/internalCWSTF" android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/internalSubTF" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp" android:textSize="18sp"
+                    android:textColor="@color/textPrimaryColor" android:textStyle="bold"
+                    android:textAlignment="center"/>
+            <TextView
+                    android:text="MTE - 1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView22"
+                    app:layout_constraintStart_toStartOf="@+id/internalMTE1TF"
+                    app:layout_constraintEnd_toEndOf="@+id/internalMTE1TF"
+                    app:layout_constraintTop_toBottomOf="@+id/internalMTE1TF" android:textAlignment="center"
+                    android:textColor="@color/textPrimaryLighterColor" android:textSize="10sp"/>
+            <TextView
+                    android:text="MTE - 2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView24" app:layout_constraintStart_toStartOf="@+id/internalMTE2TF"
+                    app:layout_constraintEnd_toEndOf="@+id/internalMTE2TF"
+                    app:layout_constraintTop_toBottomOf="@+id/internalMTE2TF"
+                    android:textColor="@color/textPrimaryLighterColor" android:textSize="10sp"
+                    android:textAlignment="center"/>
+            <TextView
+                    android:text="CWS"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView25"
+                    app:layout_constraintEnd_toEndOf="@+id/internalCWSTF"
+                    app:layout_constraintStart_toStartOf="@+id/internalCWSTF"
+                    app:layout_constraintTop_toBottomOf="@+id/internalCWSTF" android:textSize="10sp"
+                    android:textColor="@color/textPrimaryLighterColor" android:textAlignment="center"/>
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:id="@+id/view3"
+                    app:layout_constraintTop_toBottomOf="@+id/textView24" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp" android:background="#9C27B0" android:layout_marginTop="12dp"/>
+            <TextView
+                    android:text="10.00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/internalPRSTF"
-                    app:layout_constraintTop_toTopOf="@+id/textView27"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView27" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:textSize="16sp" android:textColor="@android:color/black"/>
+                    app:layout_constraintTop_toBottomOf="@+id/view3" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp" android:layout_marginTop="12dp" android:textStyle="bold"
+                    android:textAlignment="center" android:textColor="@color/textWarning" android:textSize="18sp"/>
             <TextView
-                    android:text="99.00"
+                    android:text="10.00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/internalTotalTF"
-                    app:layout_constraintTop_toTopOf="@+id/textView28"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView28"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="16sp"
-                    android:textColor="@android:color/black"/>
+                    android:id="@+id/internalResessTF" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="18sp" android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/view3"
+                    android:layout_marginTop="12dp" android:textColor="@color/textDanger"
+                    android:textAlignment="center"/>
+            <TextView
+                    android:text="10.00"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/internalTotalTF" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp" app:layout_constraintTop_toBottomOf="@+id/view3"
+                    android:layout_marginTop="12dp" android:textSize="18sp" android:textColor="@color/textSuccess"
+                    android:textStyle="bold" android:textAlignment="center"/>
+            <TextView
+                    android:text="PRS"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView29" app:layout_constraintStart_toStartOf="@+id/internalPRSTF"
+                    app:layout_constraintEnd_toEndOf="@+id/internalPRSTF"
+                    app:layout_constraintTop_toBottomOf="@+id/internalPRSTF"
+                    android:textColor="@color/textPrimaryLighterColor" android:textSize="10sp"
+                    android:textAlignment="center"/>
+            <TextView
+                    android:text="Re Exam"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView30" app:layout_constraintEnd_toEndOf="@+id/internalResessTF"
+                    app:layout_constraintStart_toStartOf="@+id/internalResessTF"
+                    app:layout_constraintTop_toBottomOf="@+id/internalResessTF"
+                    android:textColor="@color/textPrimaryLighterColor" android:textSize="10sp"
+                    android:textAlignment="center"/>
+            <TextView
+                    android:text="Total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView31" app:layout_constraintEnd_toEndOf="@+id/internalTotalTF"
+                    app:layout_constraintStart_toStartOf="@+id/internalTotalTF"
+                    app:layout_constraintTop_toBottomOf="@+id/internalTotalTF"
+                    android:textColor="@color/textPrimaryLighterColor" android:textSize="10sp"
+                    android:textAlignment="center"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
