App UI is now in sync with iOS version
Signed-off-by: black.dragon74 <nickk.2974@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#1C1C1D</color>
     <color name="colorPrimaryDark">#171717</color>
-    <color name="colorAccent">#e65100</color>
+    <color name="colorAccent">#CBCBCB</color>
+    <color name="colorMUJ">#E65100</color>
     <color name="colorBackground">#EEEFF3</color>
     <color name="kindOfPurple">#1b2638</color>
 
