--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:background="@color/colorBackground"
+        android:background="@color/backgroundColor"
         android:layout_height="match_parent"
         tools:context=".AboutActivity">
 
@@ -23,7 +23,7 @@
             android:id="@+id/aboutAppTF" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textAlignment="center" android:textStyle="bold" android:textColor="@android:color/black"
+            android:textAlignment="center" android:textStyle="bold" android:textColor="@color/textPrimaryColor"
             android:textSize="24sp"/>
     <TextView
             android:text="NULL"
@@ -32,7 +32,7 @@
             android:id="@+id/aboutVersionTF"
             app:layout_constraintTop_toBottomOf="@+id/aboutAppTF" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textAlignment="center" android:textStyle="bold"/>
+            android:textAlignment="center" android:textStyle="bold" android:textColor="@color/textPrimaryLighterColor"/>
     <TextView
             android:text="Crafted with love by Nick"
             android:layout_width="0dp"
@@ -41,5 +41,6 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:textAlignment="center"/>
+            android:layout_marginStart="8dp" android:textAlignment="center"
+            android:textColor="@color/textPrimaryLighterColor"/>
 </android.support.constraint.ConstraintLayout>
