--- a/app/src/main/res/layout/activity_announcement.xml
+++ b/app/src/main/res/layout/activity_announcement.xml
@@ -4,17 +4,17 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:background="@android:color/holo_red_light"
+        android:background="@color/backgroundColor"
         android:layout_height="match_parent"
         tools:context=".AnnouncementActivity">
 
     <TextView
-            android:text="NO ANNOUNCEMENTS ARE AVAILABLE"
+            android:text="NO NOTIFICATIONS ARE AVAILABLE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/textDanger"
             android:textStyle="bold" android:textSize="20sp"/>
 </android.support.constraint.ConstraintLayout>
