--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/backgroundColor"
         tools:context=".EventsActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -12,7 +13,7 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/colorBackground"
+            android:background="@color/backgroundColor"
             app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/eventsRecyclerView"
             android:scrollbars="vertical"/>
 </android.support.constraint.ConstraintLayout>
