--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             android:background="@color/backgroundColor"
                                              android:layout_height="match_parent">
 
     <ImageView
@@ -20,7 +21,8 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
             android:hint="Enter DMS userid" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+            app:layout_constraintTop_toBottomOf="@+id/imageView" android:textColor="@color/textPrimaryColor"
+            android:textStyle="bold"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -29,7 +31,8 @@
             android:id="@+id/loginPasswordTF"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/loginUserIDTF" android:hint="Enter your password"/>
+            app:layout_constraintTop_toBottomOf="@+id/loginUserIDTF" android:hint="Enter your password"
+            android:textColor="@color/textPrimaryColor" android:textStyle="bold"/>
     <Button
             android:text="Complete Login On DMS"
             android:layout_width="0dp"
@@ -38,7 +41,7 @@
             android:layout_marginStart="32dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/loginPasswordTF"
-            android:background="@color/colorAccent"
+            android:background="@drawable/button_round"
             android:textColor="@android:color/white" android:textStyle="bold" android:textSize="18sp"/>
     <TextView
             android:text="Crafted with love by Nick"
@@ -47,5 +50,5 @@
             android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:textAlignment="center"/>
+            android:textAlignment="center" android:textColor="@color/textPrimaryLighterColor"/>
 </android.support.constraint.ConstraintLayout>
