--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:background="@color/backgroundColor"
                                              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                              android:layout_height="match_parent">
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:cardElevation="4dp"
+            app:cardElevation="5dp"
             android:elevation="4dp"
-            app:cardCornerRadius="4dp"
+            app:cardCornerRadius="17dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:cardBackgroundColor="@color/kindOfPurple" android:id="@+id/cardView">
+            app:cardBackgroundColor="@color/cardBackgroundColor" android:id="@+id/cardView">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -78,7 +79,7 @@
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:background="@android:color/white"
+            android:background="@color/backgroundColor"
             app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/menuRecyclerView"
             android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
