--- a/app/src/main/res/layout/activity_webauth.xml
+++ b/app/src/main/res/layout/activity_webauth.xml
@@ -5,13 +5,15 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/backgroundColor"
         tools:context=".WebauthActivity">
 
     <WebView
-            android:layout_width="395dp"
-            android:layout_height="715dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/backgroundColor"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/webauthView"
-            android:layout_marginTop="24dp"/>
+    />
 </android.support.constraint.ConstraintLayout>
