--- a/app/src/main/res/layout/events_row.xml
+++ b/app/src/main/res/layout/events_row.xml
@@ -3,17 +3,17 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:background="@color/colorBackground"
+                                             android:background="@color/backgroundColor"
                                              android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent" app:cardElevation="4dp"
-            app:cardBackgroundColor="@android:color/white">
+            android:layout_marginStart="5dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent" app:cardElevation="5dp"
+            app:cardBackgroundColor="@color/cardBackgroundColor" app:cardCornerRadius="17dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -23,7 +23,7 @@
                     android:layout_height="40dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    app:cardBackgroundColor="@android:color/holo_red_dark" app:cardElevation="4dp"
+                    app:cardBackgroundColor="@color/textDanger" app:cardElevation="4dp"
                     app:cardCornerRadius="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:id="@+id/cardView4">
                 <android.support.constraint.ConstraintLayout
@@ -51,7 +51,7 @@
                     android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/cardView4" android:textSize="16sp"
-                    android:textStyle="bold" android:textColor="@android:color/black"
+                    android:textStyle="bold" android:textColor="@color/textPrimaryColor"
                     android:textAlignment="center"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
