--- a/app/src/main/res/layout/menu_row.xml
+++ b/app/src/main/res/layout/menu_row.xml
@@ -7,27 +7,48 @@
                                              android:clickable="true"
                                              android:focusable="true"
                                              android:layout_height="180dp">
-    <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp" app:srcCompat="@drawable/attendance"
-            android:id="@+id/imageView3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:scaleType="centerInside" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
-    <TextView
-            android:text="Attendance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" android:textStyle="bold"
-            android:textAlignment="center" android:textColor="@android:color/black" android:textSize="18sp"/>
-    <TextView
-            android:text="Your Attendance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textStyle="bold"/>
+
+
+    <android.support.v7.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp" android:layout_marginTop="5dp"
+            app:cardBackgroundColor="@color/cardBackgroundColor" app:cardElevation="5dp" app:cardCornerRadius="17dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp" app:srcCompat="@drawable/attendance"
+                    android:id="@+id/imageView3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:scaleType="centerInside" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="8dp"/>
+            <TextView
+                    android:text="Attendance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView3" android:textStyle="bold"
+                    android:textAlignment="center" android:textColor="@color/textPrimaryColor" android:textSize="18sp"/>
+            <TextView
+                    android:text="Your Attendance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:textStyle="bold" android:textColor="@color/textPrimaryLighterColor"/>
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
