--- a/app/src/main/res/layout/activity_announcement.xml
+++ b/app/src/main/res/layout/activity_announcement.xml
@@ -9,7 +9,7 @@
         tools:context=".AnnouncementActivity">
 
     <TextView
-            android:text="NO NOTIFICATIONS ARE AVAILABLE"
+            android:text="NO NOTIFICATIONS AVAILABLE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
