--- a/app/src/main/res/layout/menu_row.xml
+++ b/app/src/main/res/layout/menu_row.xml
@@ -16,7 +16,8 @@
             android:layout_marginBottom="5dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="5dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp" android:layout_marginTop="5dp"
-            app:cardBackgroundColor="@color/cardBackgroundColor" app:cardElevation="5dp" app:cardCornerRadius="17dp">
+            app:cardBackgroundColor="@color/cardBackgroundColor" app:cardElevation="5dp" app:cardCornerRadius="17dp"
+            android:id="@+id/menuCardView">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
